--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
               <img src="img/projects/sertifikat pkl.jpg" class="card-img-top" alt="projects1" />
               <div class="card-body">
                 <p class="card-text">Saya memiliki pengalaman magang selama 4 bulan di Vegatech System dan memperoleh sertifikat sebagai pengakuan atas kontribusi dan pencapaian selama magang tersebut</p>
-                <a href="">Check</a>
+                <a href="https://github.com/RayDF/rayadf.github.io/commit/b59dea54b70ff4e42d5be36d5eb79bc133c051d4#diff-ab735cd14ce1ef24abac12753ded67b3ca1eb8c0fa342ede07e31613e5131338">Check</a>
               </div>
             </div>
           </div>
@@ -109,7 +109,7 @@
             <div class="card">
               <img src="img/projects/por 2.png" class="card-img-top" alt="projects2" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">login form sederhana menggunakan bahasa pemrograman HTML CSS</p>
                 <a href="">Check</a>
               </div>
             </div>
@@ -118,7 +118,7 @@
             <div class="card">
               <img src="img/projects/por 3.png" class="card-img-top" alt="projects3" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">CRUD sederhana menggunakan bahasa pemrograman PHP dan MySQL</p>
                 <a href="">Check</a>
               </div>
             </div>
@@ -127,8 +127,8 @@
             <div class="card">
               <img src="img/projects/por 4.png" class="card-img-top" alt="projects4" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="">Check</a>
+                <p class="card-text">CRUD sederhana menggunakan bahasa pemrograman PHP dan MySQL</p>
+                <a href="https://youtu.be/a7d1DBr6H6w?si=CBCRlDCE_YpcRWan">Check</a>
               </div>
             </div>
           </div>
@@ -136,7 +136,16 @@
             <div class="card">
               <img src="img/projects/por 5.png" class="card-img-top" alt="projects5" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">CRUD sederhana menggunakan Framework CodeIgniter bahasa pemrograman PHP dan MySQL</p>
+                <a href="">Check</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-3">
+            <div class="card">
+              <img src="img/projects/" class="card-img-top" alt="projects6" />
+              <div class="card-body">
+                <p class="card-text">Coming Soon</p>
                 <a href="">Check</a>
               </div>
             </div>
