--- a/index.html
+++ b/index.html
@@ -143,10 +143,10 @@
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/projects/" class="card-img-top" alt="projects6" />
+              <img src="img/projects/pro 6.png" class="card-img-top" alt="projects6" />
               <div class="card-body">
-                <p class="card-text">Coming Soon</p>
-                <a href="">Check</a>
+                <p class="card-text">Membuat Artikel di Wordpress</p>
+                <a href="https://techtomotif.com/">Check</a>
               </div>
             </div>
           </div>
