menambahkan link fotografi

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
       <div class="footericons fs-3 mb-3">
         <a class="text-white" href="https://www.instagram.com/raydnhq/" target="_blank"><i class="bi bi-instagram mx-3"></i></a>
         <a class="text-white" href="https://www.youtube.com/channel/UCz68Eq0yVIZNyKnbrqAhblg" target="_blank"><i class="bi bi-youtube mx-3"></i></a>
-        <a class="text-white" href="" target="_blank"><i class="bi bi-camera mx-3"></i></a>
+        <a class="text-white" href="https://www.instagram.com/la_mia_galleria7/" target="_blank"><i class="bi bi-camera mx-3"></i></a>
       </div>
       <p>Copyright © 2024 Raya Dinhaqi Farid</p>
     </footer>
