menambahkan animasi about me dan my projects

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 
     <!--Icon-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
+
+    <!--AOS-->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
     <!--CSS-->
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -63,13 +67,13 @@
           </div>
         </div>
         <div class="row justify-content-center fs-5 text-center">
-          <div class="col-md-4">
+          <div class="col-md-4" data-aos="fade-right" data-aos-duration="1000">
             <p>
               Saya adalah mahasiswa yang berkomitmen untuk membangun karir di dunia teknologi. Saat ini saya sedang mengejar gelar ahli madya pada program studi Teknik Informatika di Universitas Amikom Yogyakarta. Walaupun saya belum
               memiliki pengalaman profesional langsung, saya telah mendalami konsep-konsep dasar dan keterampilan yang diperlukan untuk menjadi seorang profesional yang sukses di bidang ini.
             </p>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="200">
             <p>
               Dalam persiapan saya untuk memasuki dunia kerja, saya sedang fokus untuk memperdalam pemahaman saya tentang bahasa pemrograman. Diantara nya HTML, CSS, Javascript, dan PHP. Dan juga bebereapa framework seperti CodeIgniter,
               laravel dan Ionic. Saya juga berencana untuk mengikuti magang atau proyek kecil yang dapat memberi saya pengalaman praktis dalam dunia profesional.
@@ -97,7 +101,7 @@
         </div>
         <div class="row justify-content-center">
           <div class="col-md-4 mb-3">
-            <div class="card">
+            <div class="card" data-aos="flip-left" data-aos-duration="500">
               <img src="img/projects/sertifikat pkl.jpg" class="card-img-top" alt="projects1" />
               <div class="card-body">
                 <p class="card-text">Saya memiliki pengalaman magang selama 4 bulan di Vegatech System dan memperoleh sertifikat sebagai pengakuan atas kontribusi dan pencapaian selama magang tersebut</p>
@@ -106,7 +110,7 @@
             </div>
           </div>
           <div class="col-md-4 mb-3">
-            <div class="card">
+            <div class="card" data-aos="flip-left" data-aos-duration="500" data-aos-delay="100">
               <img src="img/projects/por 2.png" class="card-img-top" alt="projects2" />
               <div class="card-body">
                 <p class="card-text">login form sederhana menggunakan bahasa pemrograman HTML CSS</p>
@@ -115,7 +119,7 @@
             </div>
           </div>
           <div class="col-md-4 mb-3">
-            <div class="card">
+            <div class="card" data-aos="flip-left" data-aos-duration="1000" data-aos-delay="200">
               <img src="img/projects/por 3.png" class="card-img-top" alt="projects3" />
               <div class="card-body">
                 <p class="card-text">CRUD sederhana menggunakan bahasa pemrograman PHP dan MySQL</p>
@@ -124,7 +128,7 @@
             </div>
           </div>
           <div class="col-md-4 mb-3">
-            <div class="card">
+            <div class="card" data-aos="flip-left" data-aos-duration="1000" data-aos-delay="300">
               <img src="img/projects/por 4.png" class="card-img-top" alt="projects4" />
               <div class="card-body">
                 <p class="card-text">CRUD sederhana menggunakan bahasa pemrograman PHP dan MySQL</p>
@@ -133,7 +137,7 @@
             </div>
           </div>
           <div class="col-md-4 mb-3">
-            <div class="card">
+            <div class="card" data-aos="flip-left" data-aos-duration="1000" data-aos-delay="400">
               <img src="img/projects/por 5.png" class="card-img-top" alt="projects5" />
               <div class="card-body">
                 <p class="card-text">CRUD sederhana menggunakan Framework CodeIgniter bahasa pemrograman PHP dan MySQL</p>
@@ -142,7 +146,7 @@
             </div>
           </div>
           <div class="col-md-4 mb-3">
-            <div class="card">
+            <div class="card" data-aos="flip-left" data-aos-duration="1000" data-aos-delay="500">
               <img src="img/projects/pro 6.png" class="card-img-top" alt="projects6" />
               <div class="card-body">
                 <p class="card-text">Membuat Artikel di Wordpress</p>
@@ -221,6 +225,11 @@
     </footer>
     <!--Akhir Footer-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
 
     <script>
       const scriptURL = "https://script.google.com/macros/s/AKfycbwfC7kNJ49cp-bxyOJJkYuhMaC6SN-EH3GT-vk1b_xzkwNuau04PiTiY90gcOT4UldVvA/exec";
