--- a/index.html
+++ b/index.html
@@ -166,6 +166,18 @@
     </section>
     <!--Akhir Projects-->
 
+    <!--Gallery-->
+    <section id="gallery">
+      <div class="container">
+        <div class="row text-center mb-4">
+          <div class="col">
+            <h2>Gallery</h2>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!--Akhir Gallery-->
+
     <!--Contact me-->
     <section id="contact">
       <div class="container">
@@ -228,7 +240,9 @@
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
-      AOS.init();
+      AOS.init({
+        once: true,
+      });
     </script>
 
     <script>
