--- a/index.html
+++ b/index.html
@@ -198,6 +198,42 @@
               <img src="img/projects/g1.png" alt="gallery 1" class="img-fluid"/>
             </a>
           </div>
+        <div class="row">
+          <div class="col-md-3">
+            <a href="#">
+              <img src="img/projects/g1.png" alt="gallery 1" class="img-fluid"/>
+            </a>
+          </div>
+        <div class="row">
+          <div class="col-md-3">
+            <a href="#">
+              <img src="img/projects/g1.png" alt="gallery 1" class="img-fluid"/>
+            </a>
+          </div>
+        <div class="row">
+          <div class="col-md-3">
+            <a href="#">
+              <img src="img/projects/g1.png" alt="gallery 1" class="img-fluid"/>
+            </a>
+          </div>
+        <div class="row">
+          <div class="col-md-3">
+            <a href="#">
+              <img src="img/projects/g1.png" alt="gallery 1" class="img-fluid"/>
+            </a>
+          </div>
+        <div class="row">
+          <div class="col-md-3">
+            <a href="#">
+              <img src="img/projects/g1.png" alt="gallery 1" class="img-fluid"/>
+            </a>
+          </div>
+        <div class="row">
+          <div class="col-md-3">
+            <a href="#">
+              <img src="img/projects/g1.png" alt="gallery 1" class="img-fluid"/>
+            </a>
+          </div>
         </div>
       </div>
     </section>
