menambahkan isi 4  gallery

--- a/index.html
+++ b/index.html
@@ -177,61 +177,22 @@
         <div class="row">
           <div class="col-md-3">
             <a href="#">
-              <img src="img/projects/g1.png" alt="gallery 1" class="img-fluid"/>
+              <img src="img/gallery/thumbnail/g1.png" alt="gallery 1" class="img-fluid" />
             </a>
           </div>
-        <div class="row">
           <div class="col-md-3">
             <a href="#">
-              <img src="img/projects/g1.png" alt="gallery 1" class="img-fluid"/>
+              <img src="img/gallery/thumbnail/g1.png" alt="gallery 1" class="img-fluid" />
             </a>
           </div>
-        <div class="row">
           <div class="col-md-3">
             <a href="#">
-              <img src="img/projects/g1.png" alt="gallery 1" class="img-fluid"/>
+              <img src="img/gallery/thumbnail/g1.png" alt="gallery 1" class="img-fluid" />
             </a>
           </div>
-        <div class="row">
           <div class="col-md-3">
             <a href="#">
-              <img src="img/projects/g1.png" alt="gallery 1" class="img-fluid"/>
-            </a>
-          </div>
-        <div class="row">
-          <div class="col-md-3">
-            <a href="#">
-              <img src="img/projects/g1.png" alt="gallery 1" class="img-fluid"/>
-            </a>
-          </div>
-        <div class="row">
-          <div class="col-md-3">
-            <a href="#">
-              <img src="img/projects/g1.png" alt="gallery 1" class="img-fluid"/>
-            </a>
-          </div>
-        <div class="row">
-          <div class="col-md-3">
-            <a href="#">
-              <img src="img/projects/g1.png" alt="gallery 1" class="img-fluid"/>
-            </a>
-          </div>
-        <div class="row">
-          <div class="col-md-3">
-            <a href="#">
-              <img src="img/projects/g1.png" alt="gallery 1" class="img-fluid"/>
-            </a>
-          </div>
-        <div class="row">
-          <div class="col-md-3">
-            <a href="#">
-              <img src="img/projects/g1.png" alt="gallery 1" class="img-fluid"/>
-            </a>
-          </div>
-        <div class="row">
-          <div class="col-md-3">
-            <a href="#">
-              <img src="img/projects/g1.png" alt="gallery 1" class="img-fluid"/>
+              <img src="img/gallery/thumbnail/g1.png" alt="gallery 1" class="img-fluid" />
             </a>
           </div>
         </div>
