--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
-      const galleryIage = document.querySelectorAll(",gallery-img");
+      const galleryImage = document.querySelectorAll("gallery-img");
 
       galleryImage.forEach((img, i) => {
         Img.dataset.aos = 'fade-down'
