--- a/index.html
+++ b/index.html
@@ -182,22 +182,22 @@
           </div>
           <div class="col-md-3">
             <a href="#">
-              <img src="img/gallery/thumbnail/g1.png" alt="gallery 1" class="img-fluid gallery-img" />
+              <img src="img/gallery/thumbnail/g1.png" alt="gallery 2" class="img-fluid gallery-img" />
             </a>
           </div>
           <div class="col-md-3">
             <a href="#">
-              <img src="img/gallery/thumbnail/g3.png" alt="gallery 1" class="img-fluid gallery-img" />
+              <img src="img/gallery/thumbnail/g3.png" alt="gallery 3" class="img-fluid gallery-img" />
             </a>
           </div>
           <div class="col-md-3">
             <a href="#">
-              <img src="img/gallery/thumbnail/g4.png" alt="gallery 1" class="img-fluid gallery-img" />
+              <img src="img/gallery/thumbnail/g4.png" alt="gallery 4" class="img-fluid gallery-img" />
             </a>
           </div>
           <div class="col-md-3">
             <a href="#">
-              <img src="img/gallery/thumbnail/g5.png" alt="gallery 1" class="img-fluid gallery-img" />
+              <img src="img/gallery/thumbnail/g5.jpg" alt="gallery 5" class="img-fluid gallery-img" />
             </a>
           </div>
         </div>
@@ -270,10 +270,9 @@
       const galleryImage = document.querySelectorAll("gallery-img");
 
       galleryImage.forEach((img, i) => {
-        Img.dataset.aos = 'fade-down'
-
+        Img.dataset.aos = "fade-down";
       });
-        
+
       AOS.init({
         once: true,
       });
