--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
       const galleryImage = document.querySelectorAll("gallery-img");
 
       galleryImage.forEach((img, i) => {
-        Img.dataset.aos = "fade-down";
+        img.dataset.aos = 'fade-down';
       });
 
       AOS.init({
