--- a/index.html
+++ b/index.html
@@ -267,10 +267,10 @@
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
-      const galleryImage = document.querySelectorAll("gallery-img");
+      const galleryImage = document.querySelectorAll(".gallery-img");
 
       galleryImage.forEach((img, i) => {
-        img.dataset.aos = 'fade-down';
+        img.dataset.aos = "fade-down";
       });
 
       AOS.init({
