--- a/index.html
+++ b/index.html
@@ -271,6 +271,8 @@
 
       galleryImage.forEach((img, i) => {
         img.dataset.aos = "fade-down";
+        img.dataset.aosDelay = i * 100;
+        img.dataset.aosDuration = 1000;
       });
 
       AOS.init({
