--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               <a class="nav-link" href="#projects">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#contact">Contact me</a>
+              <a class="nav-link" href="#contact">Contact Me</a>
             </li>
           </ul>
         </div>
@@ -104,7 +104,7 @@
             <div class="card" data-aos="flip-left" data-aos-duration="500">
               <img src="img/projects/sertifikat pkl.jpg" class="card-img-top" alt="projects1" />
               <div class="card-body">
-                <p class="card-text">Saya memiliki pengalaman magang selama 4 bulan di Vegatech System dan memperoleh sertifikat sebagai pengakuan atas kontribusi dan pencapaian selama magang tersebut</p>
+                <p class="card-text">Sertifikat magang selama 4 bulan di Vegatech System</p>
                 <a href="https://github.com/RayDF/rayadf.github.io/commit/b59dea54b70ff4e42d5be36d5eb79bc133c051d4#diff-ab735cd14ce1ef24abac12753ded67b3ca1eb8c0fa342ede07e31613e5131338">Check</a>
               </div>
             </div>
@@ -165,45 +165,6 @@
       </svg>
     </section>
     <!--Akhir Projects-->
-
-    <!--Gallery-->
-    <section id="gallery">
-      <div class="container">
-        <div class="row text-center mb-4">
-          <div class="col">
-            <h2>Gallery</h2>
-          </div>
-        </div>
-        <div class="row justify-content-center">
-          <div class="col-md-3">
-            <a href="#">
-              <img src="img/gallery/thumbnail/g2.png" alt="gallery 1" class="img-fluid gallery-img" />
-            </a>
-          </div>
-          <div class="col-md-3">
-            <a href="#">
-              <img src="img/gallery/thumbnail/g1.png" alt="gallery 2" class="img-fluid gallery-img" />
-            </a>
-          </div>
-          <div class="col-md-3">
-            <a href="#">
-              <img src="img/gallery/thumbnail/g3.png" alt="gallery 3" class="img-fluid gallery-img" />
-            </a>
-          </div>
-          <div class="col-md-3">
-            <a href="#">
-              <img src="img/gallery/thumbnail/g4.png" alt="gallery 4" class="img-fluid gallery-img" />
-            </a>
-          </div>
-          <div class="col-md-3">
-            <a href="#">
-              <img src="img/gallery/thumbnail/g5.jpg" alt="gallery 5" class="img-fluid gallery-img" />
-            </a>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!--Akhir Gallery-->
 
     <!--Contact me-->
     <section id="contact">
