--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
             <h2>My Projects</h2>
           </div>
         </div>
+
         <div class="row justify-content-center">
           <div class="col-md-4 mb-3">
             <div class="card" data-aos="flip-left" data-aos-duration="500">
@@ -109,51 +110,48 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4 mb-3">
-            <div class="card" data-aos="flip-left" data-aos-duration="500" data-aos-delay="100">
-              <img src="img/projects/por 2.png" class="card-img-top" alt="projects2" />
-              <div class="card-body">
-                <p class="card-text">login form sederhana menggunakan bahasa pemrograman HTML CSS</p>
-                <a href="">Check</a>
-              </div>
-            </div>
-          </div>
+          
           <div class="col-md-4 mb-3">
             <div class="card" data-aos="flip-left" data-aos-duration="1000" data-aos-delay="200">
-              <img src="img/projects/por 3.png" class="card-img-top" alt="projects3" />
+              <img src="img/projects/crud 1.png" class="card-img-top" alt="projects3" />
               <div class="card-body">
-                <p class="card-text">CRUD sederhana menggunakan bahasa pemrograman PHP dan MySQL</p>
-                <a href="">Check</a>
+                <p class="card-text">CRUD sederhana menggunakan bahasa pemrograman PHP MySQL</p>
+                <a href="https://github.com/RayDF/CRUD-PHP-MySQL">Check</a>
               </div>
             </div>
           </div>
+
           <div class="col-md-4 mb-3">
             <div class="card" data-aos="flip-left" data-aos-duration="1000" data-aos-delay="300">
-              <img src="img/projects/por 4.png" class="card-img-top" alt="projects4" />
+              <img src="img/projects/crud 2.png" class="card-img-top" alt="projects4" />
               <div class="card-body">
-                <p class="card-text">CRUD sederhana menggunakan bahasa pemrograman PHP dan MySQL</p>
-                <a href="https://youtu.be/a7d1DBr6H6w?si=CBCRlDCE_YpcRWan">Check</a>
+                <p class="card-text">CRUD sederhana menggunakan bahasa pemrograman PHP MySQL</p>
+                <a href="https://youtu.be/a7d1DBr6H6w?si=CBCRlDCE_YpcRWan">Demo</a>
+                <a href="https://github.com/RayDF/CRUD-PHP-MySQL-2">Check</a>
               </div>
             </div>
           </div>
+
           <div class="col-md-4 mb-3">
             <div class="card" data-aos="flip-left" data-aos-duration="1000" data-aos-delay="400">
               <img src="img/projects/por 5.png" class="card-img-top" alt="projects5" />
               <div class="card-body">
-                <p class="card-text">CRUD sederhana menggunakan Framework CodeIgniter bahasa pemrograman PHP dan MySQL</p>
-                <a href="">Check</a>
+                <p class="card-text">CRUD sederhana menggunakan Framework CodeIgniter</p>
+                <a href="https://github.com/RayDF/CRUD-CodeIgniter3">Check</a>
               </div>
             </div>
           </div>
+          
           <div class="col-md-4 mb-3">
             <div class="card" data-aos="flip-left" data-aos-duration="1000" data-aos-delay="500">
-              <img src="img/projects/pro 6.png" class="card-img-top" alt="projects6" />
+              <img src="img/projects/laravel.png" class="card-img-top" alt="projects6" />
               <div class="card-body">
-                <p class="card-text">Membuat Artikel di Wordpress</p>
-                <a href="https://techtomotif.com/">Check</a>
+                <p class="card-text">CRUD sederhana menggunakan Framework Laravel</p>
+                <a href="https://github.com/RayDF/UTS-DevFramework-Laravel">Check</a>
               </div>
             </div>
           </div>
+
         </div>
       </div>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
@@ -219,6 +217,7 @@
       <div class="footericons fs-3 mb-3">
         <a class="text-white" href="https://www.instagram.com/raydnhq/" target="_blank"><i class="bi bi-instagram mx-3"></i></a>
         <a class="text-white" href="https://www.youtube.com/channel/UCz68Eq0yVIZNyKnbrqAhblg" target="_blank"><i class="bi bi-youtube mx-3"></i></a>
+        <a class="text-white" href="https://github.com/RayDF" target="_blank"><i class="bi bi-github mx-3"></i></a>
         <a class="text-white" href="https://www.instagram.com/la_mia_galleria7/" target="_blank"><i class="bi bi-camera mx-3"></i></a>
       </div>
       <p>Copyright © 2024 Raya Dinhaqi Farid</p>
