--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
               </div>
             </div>
           </div>
-          
+
           <div class="col-md-4 mb-3">
             <div class="card" data-aos="flip-left" data-aos-duration="1000" data-aos-delay="200">
               <img src="img/projects/crud 1.png" class="card-img-top" alt="projects3" />
@@ -141,7 +141,7 @@
               </div>
             </div>
           </div>
-          
+
           <div class="col-md-4 mb-3">
             <div class="card" data-aos="flip-left" data-aos-duration="1000" data-aos-delay="500">
               <img src="img/projects/laravel.png" class="card-img-top" alt="projects6" />
@@ -151,7 +151,6 @@
               </div>
             </div>
           </div>
-
         </div>
       </div>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
@@ -217,6 +216,8 @@
       <div class="footericons fs-3 mb-3">
         <a class="text-white" href="https://www.instagram.com/raydnhq/" target="_blank"><i class="bi bi-instagram mx-3"></i></a>
         <a class="text-white" href="https://www.youtube.com/channel/UCz68Eq0yVIZNyKnbrqAhblg" target="_blank"><i class="bi bi-youtube mx-3"></i></a>
+        <a class="text-white" href="https://web.facebook.com/ray.d.farid/" target="_blank"><i class="bi bi-facebook mx-3"></i></a>
+        <a class="text-white" href="https://www.linkedin.com/in/raya-dinhaqi-farid-15bb12278?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank"><i class="bi bi-linkedin mx-3"></i></a>
         <a class="text-white" href="https://github.com/RayDF" target="_blank"><i class="bi bi-github mx-3"></i></a>
         <a class="text-white" href="https://www.instagram.com/la_mia_galleria7/" target="_blank"><i class="bi bi-camera mx-3"></i></a>
       </div>
