--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
               <img src="img/projects/sertifikat pkl.jpg" class="card-img-top" alt="projects1" />
               <div class="card-body">
                 <p class="card-text">Sertifikat magang selama 4 bulan di Vegatech System</p>
-                <a href="https://github.com/RayDF/rayadf.github.io/commit/b59dea54b70ff4e42d5be36d5eb79bc133c051d4#diff-ab735cd14ce1ef24abac12753ded67b3ca1eb8c0fa342ede07e31613e5131338">Check</a>
+                <a href="https://github.com/RayDF/rayadf.github.io/commit/b59dea54b70ff4e42d5be36d5eb79bc133c051d4#diff-ab735cd14ce1ef24abac12753ded67b3ca1eb8c0fa342ede07e31613e5131338" class="button-link">Check</a>
               </div>
             </div>
           </div>
@@ -116,7 +116,7 @@
               <img src="img/projects/crud 1.png" class="card-img-top" alt="projects3" />
               <div class="card-body">
                 <p class="card-text">CRUD sederhana menggunakan bahasa pemrograman PHP MySQL</p>
-                <a href="https://github.com/RayDF/CRUD-PHP-MySQL">Check</a>
+                <a href="https://github.com/RayDF/CRUD-PHP-MySQL" class="button-link">Check</a>
               </div>
             </div>
           </div>
@@ -126,8 +126,8 @@
               <img src="img/projects/crud 2.png" class="card-img-top" alt="projects4" />
               <div class="card-body">
                 <p class="card-text">CRUD sederhana menggunakan bahasa pemrograman PHP MySQL</p>
-                <a href="https://youtu.be/a7d1DBr6H6w?si=CBCRlDCE_YpcRWan">Demo</a>
-                <a href="https://github.com/RayDF/CRUD-PHP-MySQL-2">Check</a>
+                <a href="https://youtu.be/a7d1DBr6H6w?si=CBCRlDCE_YpcRWan" class="button-link">Demo</a>
+                <a href="https://github.com/RayDF/CRUD-PHP-MySQL-2" class="button-link">Check</a>
               </div>
             </div>
           </div>
@@ -137,7 +137,7 @@
               <img src="img/projects/por 5.png" class="card-img-top" alt="projects5" />
               <div class="card-body">
                 <p class="card-text">CRUD sederhana menggunakan Framework CodeIgniter</p>
-                <a href="https://github.com/RayDF/CRUD-CodeIgniter3">Check</a>
+                <a href="https://github.com/RayDF/CRUD-CodeIgniter3" class="button-link">Check</a>
               </div>
             </div>
           </div>
@@ -147,10 +147,21 @@
               <img src="img/projects/laravel.png" class="card-img-top" alt="projects6" />
               <div class="card-body">
                 <p class="card-text">CRUD sederhana menggunakan Framework Laravel</p>
-                <a href="https://github.com/RayDF/UTS-DevFramework-Laravel">Check</a>
+                <a href="https://github.com/RayDF/UTS-DevFramework-Laravel" class="button-link">Check</a>
               </div>
             </div>
           </div>
+
+          <div class="col-md-4 mb-3">
+            <div class="card" data-aos="flip-left" data-aos-duration="1000" data-aos-delay="500">
+              <img src="img/projects/.png" class="card-img-top" alt="projects6" />
+              <div class="card-body">
+                <p class="card-text">Coming Soon</p>
+                <a href="" class="button-link">Check</a>
+              </div>
+            </div>
+          </div>
+
         </div>
       </div>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
