--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
               <img src="img/projects/laravel.png" class="card-img-top" alt="projects6" />
               <div class="card-body">
                 <p class="card-text">CRUD sederhana menggunakan Framework Laravel</p>
+                <a href="https://youtu.be/-n9IslgUnVI?si=ylZP7N-gH_fngx1S" class="button-link">Demo</a>
                 <a href="https://github.com/RayDF/UTS-DevFramework-Laravel" class="button-link">Check</a>
               </div>
             </div>
@@ -161,7 +162,6 @@
               </div>
             </div>
           </div>
-
         </div>
       </div>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
