--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Portofolio | Rays</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
 
+    <!-- Favicons -->
+    <link href="img/RR.jpg" rel="icon">
+    <link href="img/R.jpg" rel="apple-touch-icon">
+
     <!--Icon-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
 
@@ -232,7 +236,7 @@
         <a class="text-white" href="https://github.com/RayDF" target="_blank"><i class="bi bi-github mx-3"></i></a>
         <a class="text-white" href="https://www.instagram.com/la_mia_galleria7/" target="_blank"><i class="bi bi-camera mx-3"></i></a>
       </div>
-      <p>Copyright © 2024 Raya Dinhaqi Farid</p>
+      <p>Copyright © <strong><span>2024 raydnhq</span></strong></p>
     </footer>
     <!--Akhir Footer-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
