--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Portofolio | Rays</title>
+    <title>Portofolio Website | Raya Dinhaqi Farid</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
 
     <!-- Favicons -->
-    <link href="img/RR.jpg" rel="icon">
-    <link href="img/R.jpg" rel="apple-touch-icon">
+    <link href="img/logo cv.png" rel="icon">
+    <link href="img/logo cv.png.png" rel="apple-touch-icon">
 
     <!--Icon-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
